objects/JBCXM__GSLRMLines__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__ASV__c</fullName>
        <label>ASV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__BookingDate__c</fullName>
        <label>Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__ExternalSourceId__c</fullName>
        <externalId>true</externalId>
        <label>External SourceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__HeaderSourceId__c</fullName>
        <label>Header SourceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__LRMHeader__c</fullName>
        <label>LRMHeader</label>
        <referenceTo>JBCXM__GSLRMHeader__c</referenceTo>
        <relationshipLabel>GSLRMLines</relationshipLabel>
        <relationshipName>GSLRMLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__MRR__c</fullName>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__OneTime__c</fullName>
        <label>One Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>JBCXM__GSProduct__c</referenceTo>
        <relationshipLabel>GSLRMLines</relationshipLabel>
        <relationshipName>GSLRMLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__RenewalDate__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__SubscriptionEndDate__c</fullName>
        <label>Subscription EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__SubscriptionStartDate__c</fullName>
        <label>Subscription StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__Term__c</fullName>
        <label>Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Users__c</fullName>
        <label>Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GS LRM Lines</label>
    <nameField>
        <label>GSLRMLines Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GS LRM Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>